# CQECMPLX-Production

./: .gitignore  FORGE_REGISTRY.json  FRONTPAGE_README.md  INTAKE_REGISTRY.json  INTAKE_REVIEW.md  MASTER_TOPIC_PACKAGE_BLUEPRINT.md  PAPER_SUITE_AUDIT_2026-06-13.md  PRODUCTION_REPO_MAP.md  README.md
Papers/: DYAD_BATCH_REWRITE_PROTOCOL.md  PAPER_FORMAT_CONTRACT.md  README.md  REWRITE_STATUS.md  WORKSPACE_AGGREGATION_PLAN.md  build_review_pdfs.py
Papers/DyadBriefs/: README.md  block-01-dyad-01-08.md  block-01-dyad-02-07.md  block-01-dyad-03-06.md  block-01-dyad-04-05.md  lane-a-dyads-09-16-17-24-25-32.md
Papers/PDF/: review_pdf_manifest.json
Papers/Source/: CQE-paper-00.25.md  CQE-paper-00.50.md  CQE-paper-00.75.md  CQE-paper-00.md  CQE-paper-01.25.md  CQE-paper-01.50.md  CQE-paper-01.75.md  CQE-paper-01.md  CQE-paper-02.25.md  CQE-paper-02.50.md  CQE-paper-02.75.md  CQE-paper-02.md  CQE-paper-03.25.md  CQE-paper-03.50.md  CQE-paper-03.75.md  CQE-paper-03.md  CQE-paper-04.25.md  CQE-paper-04.50.md  CQE-paper-04.75.md  CQE-paper-04.md  CQE-paper-05.25.md  CQE-paper-05.50.md  CQE-paper-05.75.md  CQE-paper-05.md  CQE-paper-06.25.md  CQE-paper-06.50.md  CQE-paper-06.75.md  CQE-paper-06.md  CQE-paper-07.25.md  CQE-paper-07.50.md  CQE-paper-07.75.md  CQE-paper-07.md  CQE-paper-08.25.md  CQE-paper-08.50.md  CQE-paper-08.75.md  CQE-paper-08.md  CQE-paper-09.25.md  CQE-paper-09.50.md  CQE-paper-09.75.md  CQE-paper-09.md  (+82 more)
production/: PROMOTION_SLICE_2026-06-11_PAPER_PROOF_TEXT.md  PROMOTION_SLICE_2026-06-11_WORKTREE_UNIFICATION.md  README.md
production/_meta/: FORGE_HIERARCHY.md  HAMILTONIAN_SOURCE.md  NAMING-LAW.md  PAPER-INTENT-INDEX.md  WHITE-ROOM-MANIFEST.md  paper_intent_index.json
production/lib-forge/CQECMPLX-MetaMaterial-Designer/meta_material_system/: Dockerfile  META_MATERIAL_DESIGNER_PAPER.md  README.md  __init__.py  api.py  config.yaml  docker-compose.yml  fold_evaluation.py  heterostructure_builder.py  material_db.py  meta_material_designer.py  metaforge_cli.py  ml_potentials.py  pareto_partnering.py  physics_engines.py  physics_engines_recursive.py  production_energy.py  pyproject.toml  requirements.txt  seam_detection.py  streamlit_app.py  test_system.py  visualizers.py  waste_explorer.py
production/lib-forge/CQECMPLX-MetaMaterial-Designer/meta_material_system/tests/: __init__.py  conftest.py  test_physics_engines.py
production/orchestration/CQECMPLX-CMPLXUNI-Swarm-Frontend/: AGENTS.md  CMPLX_NEXTJS_ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md  EXPANDED_SWARM_DOCUMENTATION.md  MCP_CONFIGURATION_GUIDE.md  MCP_SETUP_COMPLETE.md  NAVIGATION.md  PROMOTION_SLICE_2026-06-11_CMPLXUNI_DOCS_CONFIGS.md  README.md  SWARM_CHAT_INTERFACE.md  THE_LIBRARY_DESIGN.md  TODO.md  claude_desktop_config.json  cursor_mcp_config.json  http_sse_config.json  mcp_config_claude_desktop.json  mcp_config_cursor.json  mcp_config_http_sse.json  pyproject.toml
production/orchestration/CQECMPLX-CMPLXUNI-Swarm-Frontend/cmplx-nextjs/: README.md  package.json
production/orchestration/CQECMPLX-CMPLXUNI-Swarm-Frontend/the-library/: Dockerfile  README.md  docker-compose.yml
production/paper-kernels/: PAPER_KERNEL_COMPONENT_SCHEMA.md  PAPER_KERNEL_REGISTRY.json  README.md
production/products/CQECMPLX-Product-Fourpack/product_entropy/: PITCH.md  README.md  pyproject.toml
production/products/CQECMPLX-Product-Fourpack/product_entropy/docker/: Dockerfile  docker-compose.yml
production/products/CQECMPLX-Product-Fourpack/product_sentinel/: PITCH.md  README.md  pyproject.toml
production/products/CQECMPLX-Product-Fourpack/product_sentinel/docker/: Dockerfile  docker-compose.yml  grafana-dashboard.json  prometheus.yml
production/tool-families/CQECMPLX-Analog-Forge-Workbench/suite/: README.md  pyproject.toml
production/tool-families/CQECMPLX-Analog-Forge-Workbench/suite/data/: MANIFEST.csv  MANIFEST.json
production/tool-families/CQECMPLX-Analog-Forge-Workbench/suite/docs/: ANALOG_FORGE_WORKBOOK_KIT_DEFINITION.md  WORKBENCH_SUITE_ARCHITECTURE.md
production/tool-families/CQECMPLX-Analog-Forge-Workbench/suite/examples/: demo_workflow.py
production/tool-families/CQECMPLX-Analog-Forge-Workbench/suite/sheets/: ACTION_SHEET_TEMPLATE.md  BALSA_LATTICE_LOG_TEMPLATE.md  CARD_PERMUTATION_LOG_TEMPLATE.md  DICE_BOUNDARY_LOG_TEMPLATE.md  GRADIENT_SHEET_TEMPLATE.md  RECEIPT_SHEET_TEMPLATE.md  STRING_BRAID_LOG_TEMPLATE.md
production/tool-families/CQECMPLX-Analog-Forge-Workbench/suite/tests/: test_workbench.py
production/tool-families/PaneForge-Workspace-Tool/: PROMOTION_SLICE_2026-06-12_PANEFORGE_WORKSPACE_TOOL.md  README.md  pyproject.toml
production/tool-families/PaneForge-Workspace-Tool/src/paneforge_tool/: __init__.py  cli.py
production/workspace-corpus-index/: PROMOTION_SLICE_2026-06-11_REPO_FORMS_INDEX.md
promotions/: CMPLX-1T_FIRST_SLICE_MANIFEST.md  CMPLX-Monorepo_FIRST_SLICE_MANIFEST.md  CMPLX_FIRST_SLICE_MANIFEST.md
proofing/: CLONED_ROOTS.md  CURATED_REPO_FORMS.md  DEPLOYMENT_PROOF_INDEX.md  KERNEL_RING.md  PROOF_TEMPLATE.md  SLICE_READY_GATE_CHECKLIST.md
proofing/deployments/: CMPLX-1T_DEPLOYMENT_PROOF.md  CMPLX-Formalization_DEPLOYMENT_PROOF.md  CMPLX-Kernel-Docker_DEPLOYMENT_PROOF.md  CMPLX-Kernel_DEPLOYMENT_PROOF.md  CMPLX-Manny_DEPLOYMENT_PROOF.md  CMPLX-Monorepo_DEPLOYMENT_PROOF.md  CMPLX-Operator-Web_DEPLOYMENT_PROOF.md  CMPLX-PartsFactory_DEPLOYMENT_PROOF.md  CMPLX-R30_DEPLOYMENT_PROOF.md  CMPLX-TMN-main_DEPLOYMENT_PROOF.md  CMPLX-TMN1_DEPLOYMENT_PROOF.md  CMPLXDevKit_DEPLOYMENT_PROOF.md  CMPLXMCP_DEPLOYMENT_PROOF.md  (+9 more)
reviews/: CMPLX-1T_INTAKE_REVIEW.md  CMPLX-Monorepo_INTAKE_REVIEW.md  CMPLX_INTAKE_REVIEW.md
tracking/: BUILD_SUMMARY_2026-06-12.md  DISTRIBUTION_PLAN_2026-06-12.md  DONE_ENOUGH_TO_TRACK.md  ESTABLISHED_GROUNDING_CITATIONS.md  LATTICE_FORGE_SUBSTRATE_ASSESSMENT.md  OBLIGATION_RESOLUTION_MAP_2026-06-13.md  POPULATION_QUEUE.json  POPULATION_QUEUE.md  PRODUCTION_TRACKING_INDEX.json  PRODUCTION_TRACKING_INDEX.md  PRODUCTION_TRACKING_INDEX.sidecar-receipt.json  REAPPLICATION_LEDGER.md  TRACKING_COVERAGE.md  TRIADIC_UNISON_ARCHITECTURE.md
(+914 files in other folders)
