[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmplx"
version = "1.0.0"
description = "CMPLX - Cartan Quadratic Equivalence Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CMPLX Team"}]
keywords = ["E8", "lattice", "AI", "agent", "geometric"]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "mcp>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "ruff>=0.1"]

[project.scripts]
cmplx = "cmplx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
