[build-system]
requires = ["setuptools>=69.5.1", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metaforge-ai"
version = "0.1.0"
description = "MetaForge-AI: Recursive Physics Engine for Metamaterial Design"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "MetaForge-AI Team", email = "metaforge@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scipy==1.13.0",
    "plotly==5.21.0",
    "streamlit==1.37.1",
    "pyyaml==6.0.1",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "tqdm==4.66.4",
    "colorlog==6.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "mypy==1.10.0",
    "types-PyYAML==6.0.12.12",
    "pytest-asyncio==0.23.7",
]

[dependency-groups]
dev = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "mypy==1.10.0",
    "types-PyYAML==6.0.12.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "B", "C4", "PL"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["meta_material_system"]
omit = ["tests/*", "*/viz_cache/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]